Removing repository commands