@@ -23,6 +23,9 @@ import org.junit.rules.TemporaryFolder;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
+import org.wildfly.channel.Channel;
+import org.wildfly.channel.ChannelManifestCoordinate;
+import org.wildfly.channel.Repository;
 import org.wildfly.prospero.actions.MetadataAction;
 import org.wildfly.prospero.actions.PromoteArtifactBundleAction;
 import org.wildfly.prospero.cli.AbstractConsoleTest;
@@ -31,13 +34,12 @@ import org.wildfly.prospero.cli.CliMessages;
 import org.wildfly.prospero.cli.ReturnCodes;
 import org.wildfly.prospero.cli.commands.CliConstants;
 import org.wildfly.prospero.model.ChannelRef;
-import org.wildfly.prospero.model.RepositoryRef;
 import org.wildfly.prospero.test.MetadataTestUtils;
 
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
@@ -132,10 +134,13 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         MetadataTestUtils.createInstallationMetadata(installationDir);
         MetadataTestUtils.createGalleonProvisionedState(installationDir, "org.wildfly.core:core-feature-pack");
 
+        Channel channel = new Channel("Customization", null, null, null,
+                List.of(new Repository(CUSTOMIZATION_REPO_ID, "file:///test/test")),
+                new ChannelManifestCoordinate(CUSTOM_CHANNELS_GROUP_ID, "test1"));
+
         when(actionFactory.promoter(any())).thenReturn(promoter);
         when(actionFactory.metadataActions(any())).thenReturn(metadataAction);
-        when(metadataAction.getChannelRefs()).thenReturn(Arrays.asList(new ChannelRef(CUSTOM_CHANNELS_GROUP_ID + ":test1", null)));
-        when(metadataAction.getRepositories()).thenReturn(Arrays.asList(new RepositoryRef(CUSTOMIZATION_REPO_ID, "file:///test/test")));
+        when(metadataAction.getChannels()).thenReturn(List.of(channel));
 
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
@@ -173,9 +178,13 @@ public class ChannelPromoteCommandTest extends AbstractConsoleTest {
         MetadataTestUtils.createInstallationMetadata(installationDir);
         MetadataTestUtils.createGalleonProvisionedState(installationDir, "org.wildfly.core:core-feature-pack");
 
+        Channel channel = new Channel("Customization", null, null, null,
+                List.of(new Repository(CUSTOMIZATION_REPO_ID, "file:///test/test")),
+                new ChannelManifestCoordinate(CUSTOM_CHANNELS_GROUP_ID, "test1"));
+
         when(actionFactory.promoter(any())).thenReturn(promoter);
         when(actionFactory.metadataActions(any())).thenReturn(metadataAction);
-        when(metadataAction.getChannelRefs()).thenReturn(Arrays.asList(new ChannelRef(CUSTOM_CHANNELS_GROUP_ID + ":test1", null)));
+        when(metadataAction.getChannels()).thenReturn(List.of(channel));
 
         int exitCode = commandLine.execute(
                 CliConstants.Commands.CHANNEL, CUSTOMIZATION_PROMOTE,
